--- a/packages/my_package/CMakeLists.txt
+++ b/packages/my_package/CMakeLists.txt
@@ -2,6 +2,8 @@ cmake_minimum_required(VERSION 2.8.3)
 project(my_package)
 
 find_package(catkin REQUIRED COMPONENTS
+  cv_bridge
+  duckietown_msgs
   rospy
 )
 
