--- a/packages/sec/package.xml
+++ b/packages/sec/package.xml
@@ -1,5 +1,5 @@
 <package>
-  <name>my_package</name>
+  <name>sec</name>
   <version>0.1.0</version>
   <description>
   This package is for the first draft for project.
